# SMSGateway

./: CMakeLists.txt  README.md  make.sh
doc/: Function Test Case.doc  Performance Test Report.doc  cmpp1.2.doc  create_tables.sql  create_tablespace&user.sql  how to use cmpp simulator.doc  test_script.sql
etc/: config.xml
src/Base/: IfGatewayService.h  IfMessageService.h  IfRequestService.h  IfResponseService.h  Protocol.h  ServiceFactory.hpp
src/Dao/: ReceiveMessageDAO.cpp  ReceiveMessageDAO.h  StatusReportDAO.cpp  StatusReportDAO.h
src/Entity/: ReceiveMessage.hpp  StatusReport.hpp
src/Main/: Main.cpp  PreDef.cpp  PreDef.h  SMSSrv.cpp  SMSSrv.h
src/Service/: ActiveTestRespService.cpp  ActiveTestRespService.h  ActiveTestService.cpp  ActiveTestService.h  ConnectRespService.cpp  ConnectRespService.h  ConnectService.cpp  ConnectService.h  DeliverRespService.cpp  DeliverRespService.h  DeliverService.cpp  DeliverService.h  SMSGatewayService.cpp  SMSGatewayService.h  SubmitRespService.cpp  SubmitRespService.h  SubmitService.cpp  SubmitService.h  TerminateRespService.cpp  TerminateRespService.h  TerminateService.cpp  TerminateService.h
src/Util/: ByteStream.hpp  Config.cpp  Config.h  DAO.cpp  DAO.h  Log.cpp  Log.h  Util.cpp  Util.h  test.c
